--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Todos</title>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>Todos</title><link rel=stylesheet type=text/css href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css><link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css><link href=/static/css/app.d41d8cd98f00b204e9800998ecf8427e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.005a5c70a0092689c536.js></script><script type=text/javascript src=/static/js/vendor.03284005ac1c4c843d84.js></script><script type=text/javascript src=/static/js/app.1da152491395af782401.js></script></body></html>
